--- a/demo/index.html
+++ b/demo/index.html
@@ -154,6 +154,17 @@
 
     </div>
 
+    <div class="field">
+        <label>Select with search</label>
+        <gig-select label="Select a city" search>
+            <option value="malaga">Málaga</option>
+            <option value="madrid">Madrid</option>
+            <option value="barcelona">Barcelona</option>
+            <option value="valencia">Valencia</option>
+        </gig-select>
+
+    </div>
+
 </body>
 
 </html>
