--- a/src/gig-select.html
+++ b/src/gig-select.html
@@ -189,6 +189,25 @@
             top: -5px;
         }
 
+        .search {
+            padding: 5px;
+        }
+
+        .search input {
+            border: 1px solid #e4eaec;
+            border-radius: 3px;
+            background-color: white;
+            color: #76838f;
+            font-size: 14px;
+            font-family: Roboto,sans-serif;
+            padding: 4px;
+            -webkit-appearance: none;
+            width: 100%;
+            line-height: 18px;
+            outline: none;
+
+        }
+
     </style>
 
     <template>
@@ -203,7 +222,12 @@
                 <i class="fa fa-angle-down"></i>
             </div>
             <ul class$="[[showSelect]]" style$="{{getHeight(height)}}">
-                <template is="dom-repeat" items="{{items}}">
+                <template is="dom-if" if="[[search]]">
+                    <div class="search">
+                        <input type="search" value="{{filterVal::input}}">
+                    </div>
+                </template>
+                <template is="dom-repeat" items="{{items}}" filter="{{_filter(filterVal)}}">
                     <li on-click="selectItem" class$="[[itemClass(item, itemSelected)]]">
                         <template is="dom-if" if="{{html}}">
                             <div class="html"><gig-html html="{{item.innerHTML}}"></gig-html>
@@ -268,6 +292,13 @@
                     this.checkSelected();
                     this.contentHidden = true;
                     this.showSelect = null;
+                },
+                _filter: function(val) {
+                    return function(item) {
+                        if (!val) return true;
+                        if (!item) return false;
+                        return (item.label  && ~item.label.toLowerCase().indexOf(val.toLowerCase()));
+                    };
                 },
                 checkSelected: function() {
 
@@ -450,6 +481,10 @@
                         type: Boolean,
                         value: false
                     },
+                    search: {
+                        type: Boolean,
+                        value: false
+                    }
                 }
             })
         })();
