--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.0.6 - 2016-01-16
+ @version v0.0.7 - 2016-01-17
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -10,7 +10,8 @@
 <link rel="import" href="../gig-html/gig-html.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="../font-roboto/dist/styles/roboto.min.css">
-
+<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
+<link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
 
 <dom-module id="gig-select">
 
@@ -291,6 +292,10 @@
                 listeners: {
                     'change' : 'changeEvent'
                 },
+                behaviors: [
+                    Polymer.IronFormElementBehavior,
+                    Polymer.IronValidatableBehavior
+                ],
                 changeEvent: function() {
 
                 },
@@ -299,6 +304,21 @@
                     this.checkSelected();
                     this.contentHidden = true;
                     this.showSelect = null;
+                },
+                _getValidity: function() {
+                    return this.checkRequired();
+                },
+                checkRequired: function() {
+                    this.errorMessage = null;
+                    this.invalid = false;
+
+                    if (this.required && !this.value) {
+                        this.errorMessage = 'Field required';
+                        this.invalid = true;
+                        return false;
+                    } else {
+                        return true;
+                    }
                 },
                 _filter: function(val) {
                     return function(item) {
